[package]
name = "numpy"
version = "0.12.1"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>", "Yuji Kanagawa <yuji.kngw.80s.revive@gmail.com>"]
description = "Rust binding of NumPy C-API"
documentation = "https://pyo3.github.io/rust-numpy/numpy"
edition = "2018"
repository = "https://github.com/rust-numpy/rust-numpy"
keywords = ["numpy", "python", "binding"]
license-file = "LICENSE"

[dependencies]
cfg-if = "0.1"
libc = "0.2"
num-complex = "0.2"
num-traits = "0.2"
ndarray = ">=0.13"
# TODO use pyo3 0.13 when released
pyo3 = { git = "https://github.com/PyO3/pyo3" }

[features]
# In default setting, python version is automatically detected
default = []


[workspace]
members = ["examples/*"]
